@@ -2,6 +2,11 @@
  *
  */
 
+2009-04-25 15:55 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  + src/wxbase/events/wxhSocketEvent.prg
+  + src/wxbase/events/wx_SocketEvent.cpp
+    * added forgotten sourcer in last commit
+
 2009-04-25 15:30 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * GNUmakefile
     * updated makefile
